# Test

./: pyproject.toml
.github/workflows/: ci.yml
Apptainer/Continuous/: KAMMA_FIFO_curr1.sbatch  KAMMA_FIFO_curr2.sbatch  KAMMA_curr1.sbatch  KAMMA_curr2.sbatch  KAMMA_g1d_g21.sbatch  KAMMA_medium.sbatch
my_runs/kamma_4d_nofifo_random_RLIL/kamma_4d_nofifo_random_RLIL_s1/: reward_components_env0_timeseries.csv
src/options_sim/cli/: eval_artifacts.py  train.py
tests/: test_entrypoints_help.py  test_train_router.py
train/: train_kamma_4d_fifo_gv_RLIL.py  train_kamma_4d_fifo_gv_g1d_g2d.py  train_kamma_4d_nofifo_gv_g1d_g2d.py  train_kamma_4d_nofifo_random_RLIL.py  train_kamma_4d_nofifo_random_g1d_g21.py
